/*
 * Copyright 2022, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.commandbus;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.test.commandbus.event";
option java_outer_classname = "CommandBusEventsProto";
option java_multiple_files = true;

import "spine/core/user_id.proto";
import "spine/test/commandbus/project.proto";

message CmdBusProjectCreated {

    ProjectId project_id = 1;
}

message CmdBusTaskAdded {
    ProjectId project_id = 1;
    Task task = 2;
}

message CmdBusTaskRemoved {
    ProjectId project_id = 1;
    Task task = 2;
}

message CmdBusTaskAssigned {
    TaskId task_id = 1;
    core.UserId assignee = 2;
}

message CmdBusTaskStarted {
    TaskId task_id = 1;
}

message CmdBusProjectStarted {
    ProjectId project_id = 1;
}

message CmdBusMandatoryFieldEvent {
    ProjectId project_id = 1 [(required) = true];
}

// An event emitted when a project is created for duplicate command tests.
//
message DCmdBusProjectCreated {
    ProjectId project_id = 1;
}
